--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-
-
 # First Install portaudio
 #portaudio --version
-Python==3.11.4
+# Install Python ~ 3.11
 numpy==1.25.0
 torch==1.9.0
 transformers==4.30.2
@@ -10,10 +8,7 @@ PyAudio==0.2.13
 pydub==0.25.1
 miniaudio==1.59
 SpeechRecognition==3.10.0
-openai-whisper
-
-
-~                                                                               
+openai-whisper==20230314
 ~                                                                               
 ~                                                                               
 ~                                                                               
